<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Formulize</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_in_label">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="formulize_url_hint">Formulize URL</string>
    <string name="account_details_title">ACCOUNT DETAILS</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_application_list">Applications</string>
    <string name="title_activity_form_list">Application Forms</string>
    <string name="title_activity_screen">ScreenActivity</string>
    <string name="title_activity_screen_web">ScreenWebActivity</string>
    <string name="title_activity_connection">Formulize</string>
    <string name="reattempt_message">Incorrect username or password Try again.</string>

</resources>